<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- SIGN-IN SCREEN -->
    <SurfaceView
            android:id="@+id/surface"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
    <LinearLayout
        android:id="@+id/screen_sign_in"
        style="@style/LLScreen">

        <TextView style="@style/GameTitle" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_sign_in"
            style="@style/SignInButton" />
    </LinearLayout>

    <!-- MAIN SCREEN -->
    <LinearLayout
        android:id="@+id/screen_main"
        style="@style/LLScreen">


        <TextView style="@style/GameTitle" />


        <ImageView
            android:id="@+id/button_quick_game"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:src="@drawable/ic_play_circle_outline_black_24dp" />

        <!--<Button-->
            <!--android:id="@+id/button_invite_players"-->
            <!--style="@style/MainScreenButton"-->
            <!--android:text="@string/invite_players" />-->

        <!--<Button-->
            <!--android:id="@+id/button_see_invitations"-->
            <!--style="@style/MainScreenButton"-->
            <!--android:text="@string/see_invitations" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <ImageView
            android:id="@+id/button_see_map"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_map_black_24dp" />

            <ImageView
            android:id="@+id/button_see_profile"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <ImageView
                android:id="@+id/battery_viewer"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_info_outline_black_24dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/button_sign_out"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_directions_run_black_24dp" />
    </LinearLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout
        android:id="@+id/invitation_popup"
        style="@style/InvPopup">

        <TextView
            android:id="@+id/incoming_invitation_text"
            style="@style/InvPopupText" />

        <Button
            android:id="@+id/button_accept_popup_invitation"
            style="@style/InvPopupButton"
            android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout
        android:id="@+id/screen_wait"
        style="@style/LLScreen">

        <TextView
            style="@style/Blurb"
            android:text="@string/please_wait" />
    </LinearLayout>

    <!-- GAMEPLAY SCREEN -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/screen_game"
        style="@style/LLScreen"
        android:padding="0dp"
        android:visibility="visible">


        <ImageView
            android:id="@+id/screen_game_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/black"
            android:scaleType="fitXY"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SurfaceView
            android:id="@+id/game_panel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="9:13.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

        </SurfaceView>

        <TextView
            android:id="@+id/start_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/start_countdown_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="?android:attr/colorPrimary"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.301" />

        <ImageView
            android:id="@+id/life3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_favorite_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/game_panel"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/life2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_favorite_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/game_panel"
            app:layout_constraintStart_toEndOf="@+id/life3"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/life1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_favorite_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/game_panel"
            app:layout_constraintStart_toEndOf="@+id/life2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/enemy_life1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_favorite_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/game_panel"
            app:layout_constraintEnd_toStartOf="@+id/enemy_life2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/enemy_life2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_favorite_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/game_panel"
            app:layout_constraintEnd_toStartOf="@+id/enemy_life3"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/enemy_life3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_favorite_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/game_panel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="You : "
            android:textColor="@color/BlurbColor"
            app:layout_constraintBottom_toTopOf="@+id/game_panel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/game_lost_overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.75"
            android:background="@color/BlurbColor"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="leaveGameScreen"
            android:text="@string/game_lost_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/SignOutButtonBackground"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/game_lost_text" />

        <TextView
            android:id="@+id/game_won_overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.75"
            android:background="@color/BlurbColor"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="leaveGameScreen"
            android:text="@string/game_won_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/SignOutButtonBackground"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/game_won_text" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
